<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_create_hunt"
    tools:context="georgemcdonnell.com.treasurehunt.hunts.CreateHuntFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/create_new_hunt"
        android:id="@+id/create_hunt_title"
        android:layout_gravity="left|top" />

    <EditText
        android:hint="@string/location_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hunt_name_field"
        android:layout_below="@+id/create_hunt_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_button"
        android:id="@+id/create_hunt_button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/hunt_name_field"
        android:layout_alignLeft="@+id/hunt_name_field"
        android:layout_alignStart="@+id/hunt_name_field"
        android:layout_alignRight="@+id/hunt_name_field"
        android:layout_alignEnd="@+id/hunt_name_field" />


</RelativeLayout>
